--- a/src/ParkitectNexus.AssetTools/packages.config
+++ b/src/ParkitectNexus.AssetTools/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
-  <package id="ParkitectNexus.AssetMagic" version="0.1.1.0" targetFramework="net452" />
+  <package id="ParkitectNexus.AssetMagic" version="0.1.1.0" targetFramework="net452" requireReinstallation="True" />
 </packages>
