--- a/src/ParkitectNexus.AssetTools/ParkitectNexus.AssetTools.csproj
+++ b/src/ParkitectNexus.AssetTools/ParkitectNexus.AssetTools.csproj
@@ -37,12 +37,12 @@
       <HintPath>..\..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ParkitectNexus.AssetMagic, Version=0.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\ParkitectNexus.AssetMagic.0.1.1.0\lib\net452\ParkitectNexus.AssetMagic.dll</HintPath>
+    <Reference Include="ParkitectNexus.AssetMagic, Version=2.0.5962.36529, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\ParkitectNexus.AssetMagic.2.0.5962.36529\lib\net45\ParkitectNexus.AssetMagic.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="BlueprintDump.cs" />
     <Compile Include="DumpDataResolver.cs" />
+    <Compile Include="FontTools.cs" />
     <Compile Include="OptionSets\FileProcessingSubOptions.cs" />
     <Compile Include="OptionSets\Options.cs" />
     <Compile Include="OptionSets\BlueprintConvertSubOptions.cs" />
