--- a/src/ParkitectNexus.AssetTools/packages.config
+++ b/src/ParkitectNexus.AssetTools/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
-  <package id="ParkitectNexus.AssetMagic" version="0.1.1.0" targetFramework="net452" requireReinstallation="True" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
+  <package id="ParkitectNexus.AssetMagic" version="2.0.5962.36529" targetFramework="net452" />
 </packages>
